<resources>
    <string name="app_name">uaspam_041</string>
    <string name="var1">ini</string>
    <string name="eEmail">Masukkan Email</string>
    <string name="bsignin">Sign-In</string>
    <string name="tLogin">Login</string>
    <string name="tData">Data Anda</string>
    <string name="tEmail">Email:</string>
    <string name="tPassword">Password</string>
    <string name="txemail">Ini hasil Email</string>

    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="selamat">Light Novel App</string>
    <string name="notel">Nomor Telepon</string>
    <string name="daftar">Register</string>
    <string name="Registrasi">Registrasi</string>
    <string name="hasiltask">Hasil Task</string>
    <string name="welcome">Welcome in Todo App</string>
    <string name="txnama">Nama</string>
    <string name="lednama">Masukkan Nama</string>
    <string name="txpassword">Password</string>
    <string name="ledPassword">Masukkan Password</string>

    <string name="tdeletedata">Delete Data</string>
    <string name="tsimpan">Save</string>
    <string name="tcancel">Cancel</string>
    <string name="teditdata">Edit Data</string>
    <string name="tjudul">Judul</string>
    <string name="tpenulis">Penulis</string>
    <string name="tsinopsis">Sinopsis</string>
    <string name="tview">View</string>

    <string name="newto">New to Todo App ?</string>
    <string name="bregister">Register</string>
    <string name="txregister">Register</string>
    <string name="rtxnama">Nama</string>
    <string name="rednama">Masukkan Nama</string>
    <string name="rtxemail">Email</string>
    <string name="redemail">Masukkan Email</string>
    <string name="rtxpassword">password</string>
    <string name="redpassword">Masukkan Password</string>
    <string name="repass">Re-Password</string>
    <string name="rerepass">Masukkan Password</string>
    <string name="signup">Sign-Up</string>
    <string name="selamatdatang">Selamat Datang</string>
    <string name="namalogin">Pascal</string>
    <string name="judultask">Task</string>
    <string name="task">Task</string>
    <string name="tednatask">Masukkan Task</string>
    <string name="jenistask">Jenis Task</string>
    <string name="edjenistask">Masukkan Jenis Task</string>
    <string name="timetask">Time Task</string>
    <string name="edtimetask">Masukkan Lama Task</string>
    <string name="fab">FAB</string>
    <string name="hnamatask">Hasil Nama Task</string>
    <string name="hjenistask">Hasil Jenis Task</string>
    <string name="htimetask">Hasil Time Task</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
</resources>