<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="117dp"
        android:layout_height="107dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/register_icon" />

    <TextView
        android:id="@+id/rtxnama"
        android:layout_width="292dp"
        android:layout_height="30dp"
        android:text="@string/rtxnama"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.157" />

    <EditText
        android:id="@+id/rednama"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/rednama"
        android:inputType="textPersonName"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rtxnama"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/rtxemail"
        android:layout_width="292dp"
        android:layout_height="30dp"
        android:text="@string/rtxemail"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rednama"
        app:layout_constraintVertical_bias="0.064" />

    <EditText
        android:id="@+id/redemail"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/redemail"
        android:inputType="textEmailAddress"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rtxemail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/rtxpassword"
        android:layout_width="292dp"
        android:layout_height="30dp"
        android:text="@string/rtxpassword"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redemail"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/redpassword"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/redpassword"
        android:inputType="textPassword"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rtxpassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/repass"
        android:layout_width="292dp"
        android:layout_height="30dp"
        android:text="@string/repass"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redpassword"
        app:layout_constraintVertical_bias="0.111" />

    <EditText
        android:id="@+id/reredpass"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/rerepass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repass"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signup"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reredpass"
        app:layout_constraintVertical_bias="0.433" />

    <TextView
        android:id="@+id/txregister"
        android:layout_width="292dp"
        android:layout_height="40dp"
        android:text="@string/txregister"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.049" />

</androidx.constraintlayout.widget.ConstraintLayout>